prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/var_scope_2.diag.txt
ERROR: Unknown variable [x]
testData/diagnostics/var_scope_2.nut:5:6

print(x)
      ^


